@@ -2,7 +2,7 @@ Package: MODIS
 Type: Package
 Title: Acquisition and Processing of MODIS Products
 Version: 1.1.3
-Date: 2018-07-10
+Date: 2018-07-11
 URL: https://github.com/MatMatt/MODIS
 BugReports: https://github.com/MatMatt/MODIS/issues
 Authors@R: c(
@@ -47,6 +47,7 @@ Imports:
     stats,
     utils, 
     XML
+SystemRequirements: GDAL (>= 1.8.0)    
 ByteCompile: TRUE
 RoxygenNote: 6.0.1
 Suggests: testthat
